# meltdown_manager

./: .gitattributes  Cargo.toml  README.md  build.rs  notes.txt
.github/workflows/: release.yaml
assets/blocks/: Air.block  Iron.block  Rubber.block  Steel.block  Thorium.block  Wax.block  copper.block  notes  template.block  uranium.block  water.block
assets/shaders/: temperature.wgsl
benches/: cellular_automata.rs
crates/block_macro/: Cargo.toml
crates/block_macro/src/: computed.rs  lib.rs  properties.rs
crates/chunk_serde/: Cargo.toml
crates/chunk_serde/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  player.rs  ui.rs  utils.rs
crates/game/src/diagnostics/: entity.rs  fps.rs  mod.rs  shader.rs
crates/game/src/voxels/: cellular_automata.rs  mod.rs  tests.rs  voxel_chunk.rs
crates/game/src/voxels/cellular_automata/: cells.rs  diagnostics.rs  logic.rs  mod.rs
crates/game/src/voxels/voxel_chunk/: mod.rs  prefab.rs
src/: hotbar.rs  lib.rs  main.rs  menu.rs  player.rs  raycast.rs  utils.rs
src/console/: commands.rs  mod.rs
src/console/commands/: export.rs  highlight.rs  neighbors.rs  redraw.rs  save_load.rs
src/diagnostics/: automata.rs  chunk.rs  mod.rs  reporting.rs  shader.rs
src/ui/: crosshair.rs  ui.rs
src/voxels/: block.rs  blocks.rs  map.rs  mod.rs  tests.rs
src/voxels/cellular_automata/: batching.rs  cells.rs  consts.rs  debugging.rs  diagnostics.rs  logic.rs  mod.rs  util.rs
src/voxels/cellular_automata/logic/: test.rs
src/voxels/voxel_chunk/: chunk.rs  id.rs  mod.rs  prefab.rs
