[package]
name = "meltdown-manager"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

[dependencies]
fixed = "*"
phoxels = {git = "https://github.com/PhaestusFox/phoxels.git", branch = "jam_updates"}
thiserror = "*"
strum = "*"
strum_macros = "*"
chunk_serde = {path = "crates/chunk_serde"}
noise = "*"
bitflags = "*"
bevy = {version = "0.16"}

[features]
# default = []
default = ["file_watcher"]
file_watcher = ["bevy/file_watcher"]

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
rand = "0.9.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_editor_pls = {git = "https://github.com/benfrankel/bevy_editor_pls.git", branch = "bevy-0-16"}

[[bench]]
name = "cellular_automata"
harness = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[workspace]
members = ["crates/*"]
# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
