[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
fixed = "*"
bevy_editor_pls = {git = "https://github.com/benfrankel/bevy_editor_pls.git", branch = "bevy-0-16"}

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[profile.dev.package."bevy_editor_pls"]


[[bench]]
name = "cellular_automata"
harness = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"